--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 gradio>=3.0
 numpy>=1.19.0
-Adafruit-DHT>=1.4.0
+adafruit-blinka>=8.0.0
+adafruit-circuitpython-dht>=3.0.0
 scikit-learn>=1.0
 pandas>=1.3.0
